finalizamos con eval

--- a/timit/ctc.ipynb
+++ b/timit/ctc.ipynb
@@ -341,7 +341,15 @@
    "id": "7dff4833",
    "metadata": {},
    "source": [
-    "## Proximo paso"
+    "## Funciones de entrenamiento validación y evaluación"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54780e5e",
+   "metadata": {},
+   "source": [
+    "### Entrenamiento y validación"
    ]
   },
   {
@@ -366,35 +374,131 @@
     "\n",
     "\n",
     "# Train y valid\n",
-    "def fit(modelo, train_set, valid_set, n_epochs):\n",
-    "    optimizer = torch.optim.Adadelta(rho=0.95,lr = self.params['lr'],eps=1.e-8)\n",
+    "def fit(train_set, valid_set, modelo, optimizer, criterion, scheduler n_epochs):\n",
     "    train_loss = list()\n",
+    "    valid_loss = list()\n",
     "    for i in range(1, n_epochs+1):\n",
     "        print(f'Procesando epoch {i}/{n_epochs}')\n",
     "        avg_train_loss = 0.0\n",
-    "        step = 0\n",
+    "        step = 0 # Contador de batches de un epoch\n",
     "        # fit de train\n",
     "        self.ctc_metrics = sb.utils.metric_stats.MetricStats(metric=sb.nnet.losses.ctc_loss, \n",
     "                blank_index=<blank_index>, reduction:=batch).ctc_stats()\n",
+    "        modelo.to(device)\n",
     "        modelo.train()\n",
     "        optimizer.zero_grad()\n",
-    "        with tqdm(train_dl,colour=\"yellow\",desc='entrenando') as t:\n",
+    "        with tqdm(train_dl,colour=\"yellow\",initial=step, desc='entrenando') as t:\n",
     "            for batch in t:\n",
     "                (wavs,wavs_l), (phns, phns_l) = batch\n",
+    "                step += 1\n",
     "                # loss = self.fit_batch(batch)\n",
     "                feats = self.hparams.compute_features(wavs)\n",
     "                feats = self.modules.normalize(feats, wavs_l)\n",
     "                pout, pout_l = modelo(feats)\n",
-    "                loss = self.hparams.compute_cost(pout, phns, wavs_l, phns_l)\n",
+    "                loss = criterion(pout, phns, wavs_l, phns_l)\n",
+    "                loss.backward()\n",
+    "                optimizer.step()\n",
+    "                # scheduler.step()\n",
     "                self.ctc_metrics.append(batch.id, pout, phns, pout_l, phns_l)\n",
-    "                \n",
     "                avg_train_loss = update_average(loss, avg_train_loss, step)\n",
     "                t.set_postfix(train_loss=avg_train_loss)\n",
     "        train_loss.append((i,avg_train_loss))\n",
-    "            \n",
+    "        # fit de valid\n",
+    "        ctc_metrics = sb.utils.metric_stats.MetricStats(metric=sb.nnet.losses.ctc_loss, \n",
+    "                blank_index=<blank_index>, reduction:=batch).ctc_stats()\n",
+    "        per_metrics = sb.utils.metric_stats.ErrorRateStats()\n",
+    "        modelo.eval()\n",
+    "        avg_valid_loss = 0\n",
+    "        step = 0\n",
+    "        with torch.no_grad():\n",
+    "            for batch in tqdm(valid_dl,colour=\"red\",desc='validando') as t:\n",
+    "                step += 1\n",
+    "                # loss = self.evaluate(batch)\n",
+    "                feats = self.hparams.compute_features(wavs)\n",
+    "                feats = self.modules.normalize(feats, wavs_l)\n",
+    "                pout, pout_l = modelo(feats)\n",
+    "                loss = criterion(pout, phns, wavs_l, phns_l)\n",
+    "                ctc_metrics.append(batch.id, pout, phns, pout_l, phns_l)\n",
+    "                sequence = sb.decoders.ctc_greedy_decode(\n",
+    "                    pout, pout_lens, blank_id=self.hparams.blank_index)\n",
+    "                self.per_metrics.append(\n",
+    "                    ids=batch.id,\n",
+    "                    predict=sequence,\n",
+    "                    target=phns,\n",
+    "                    target_len=phn_lens,\n",
+    "                    ind2lab=self.label_encoder.decode_ndim,\n",
+    "                )\n",
+    "                avg_valid_loss = update_average(loss, avg_valid_loss)\n",
+    "        valid_loss.append(avg_valid_loss)        \n",
+    "        per = self.per_metrics.summarize(\"error_rate\")\n",
+    "        old_lr, new_lr = sb.nnet.schedulers.NewBobScheduler.lr_annealing(per)\n",
+    "        sb.nnet.schedulers.update_learning_rate(self.optimizer, new_lr)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b5442fd",
+   "metadata": {},
+   "source": [
+    "### Evaluación"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e264e05b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Evaluación\n",
+    "def evaluate(test_dl, modelo, ):\n",
+    "    self.ctc_metrics = sb.utils.metric_stats.MetricStats(metric=sb.nnet.losses.ctc_loss, \n",
+    "                blank_index=<blank_index>, reduction:=batch).ctc_stats()\n",
+    "    per_metrics = sb.utils.metric_stats.ErrorRateStats()\n",
+    "    modelo.eval()\n",
+    "    avg_test_loss = 0.0\n",
+    "    step = 0\n",
+    "    with torch.no_grad():\n",
+    "        for batch in tqdm(test_dl,colour=\"blue\",desc='validando') as t:\n",
+    "            self.step += 1\n",
+    "            #evaluate_batch()\n",
+    "            feats = self.hparams.compute_features(wavs)\n",
+    "            feats = self.modules.normalize(feats, wavs_l)\n",
+    "            pout, pout_l = modelo(feats)\n",
+    "            loss = criterion(pout, phns, wavs_l, phns_l)\n",
+    "            self.ctc_metrics.append(batch.id, pout, phns, pout_l, phns_l)\n",
+    "            sequence = sb.decoders.ctc_greedy_decode(\n",
+    "                    pout, pout_lens, blank_id=self.hparams.blank_index)\n",
+    "            self.per_metrics.append(\n",
+    "                    ids=batch.id,\n",
+    "                    predict=sequence,\n",
+    "                    target=phns,\n",
+    "                    target_len=phn_lens,\n",
+    "                    ind2lab=self.label_encoder.decode_ndim,\n",
+    "                )\n",
+    "            avg_test_loss = self.update_average(loss, avg_test_loss) \n",
+    "        with open(\n",
+    "                    self.hparams.test_wer_file, \"w\", encoding=\"utf-8\"\n",
+    "                ) as w:\n",
+    "                    w.write(\"CTC loss stats:\\n\")\n",
+    "                    self.ctc_metrics.write_stats(w)\n",
+    "                    w.write(\"\\nPER stats:\\n\")\n",
+    "                    self.per_metrics.write_stats(w)\n",
+    "                    print(\n",
+    "                        \"CTC and PER stats written to \",\n",
+    "                        self.hparams.test_wer_file,\n",
+    "                    )\n",
     "\n",
-    "\n",
-    "        falta el optimizer step"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d66e040d",
+   "metadata": {},
+   "source": [
+    "## Main"
    ]
   },
   {
@@ -416,8 +520,9 @@
     "    dnn_neurons=par['dnn_neurons'],\n",
     "    out_neurons=par['output_neurons'])\n",
     "   \n",
-    "modelo.to(device)\n",
     "\n",
+    "optimizer = torch.optim.Adadelta(rho=0.95,lr = self.params['lr'],eps=1.e-8)\n",
+    "                                criterion = nn.CTCLoss(blank=0).to(device)\n",
     "# Prepare iterating variables\n",
     "avg_train_loss = 0.0\n",
     "step = 0\n",
@@ -441,7 +546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
