entendimos on_stage

--- a/timit/ctc.ipynb
+++ b/timit/ctc.ipynb
@@ -374,7 +374,7 @@
     "\n",
     "\n",
     "# Train y valid\n",
-    "def fit(train_set, valid_set, modelo, optimizer, criterion, scheduler n_epochs):\n",
+    "def fit(train_set, valid_set, modelo, optimizer, criterion, scheduler, n_epochs):\n",
     "    train_loss = list()\n",
     "    valid_loss = list()\n",
     "    for i in range(1, n_epochs+1):\n",
@@ -478,7 +478,7 @@
     "                    ind2lab=self.label_encoder.decode_ndim,\n",
     "                )\n",
     "            avg_test_loss = self.update_average(loss, avg_test_loss) \n",
-    "        with open(\n",
+    "            with open(\n",
     "                    self.hparams.test_wer_file, \"w\", encoding=\"utf-8\"\n",
     "                ) as w:\n",
     "                    w.write(\"CTC loss stats:\\n\")\n",
@@ -522,7 +522,7 @@
     "   \n",
     "\n",
     "optimizer = torch.optim.Adadelta(rho=0.95,lr = self.params['lr'],eps=1.e-8)\n",
-    "                                criterion = nn.CTCLoss(blank=0).to(device)\n",
+    "criterion = nn.CTCLoss(blank=0).to(device)\n",
     "# Prepare iterating variables\n",
     "avg_train_loss = 0.0\n",
     "step = 0\n",
