analisis de las estadisticas

--- a/timit/aux.ipynb
+++ b/timit/aux.ipynb
@@ -1457,6 +1457,112 @@
     "for batch in tqdm.tqdm(train_dl,colour=\"yellow\",desc='entrenando'):\n",
     "    i += 1"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5ee5796",
+   "metadata": {},
+   "source": [
+    "### Análisis de las funciones de `MetricStats` de speechbrain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c1609ea0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1.5772032737731934\n",
+      "loss=-1.5772032737731934\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from speechbrain.nnet.losses import ctc_loss\n",
+    "from speechbrain.utils.metric_stats import MetricStats\n",
+    "\n",
+    "# Corrected log_probs shape: [batch_size, time_steps, vocab_size]\n",
+    "# Example: batch_size=2, time_steps=max_len_in_batch, vocab_size=3\n",
+    "# Utterance 1: 2 timesteps, Utterance 2: 1 timestep\n",
+    "log_probs = torch.tensor([\n",
+    "    # Utterance 1: 2 timesteps, 3 vocab_size\n",
+    "    [[0.1, 0.8, 0.1],  # Timestep 1: high prob for 'a' (index 1)\n",
+    "     [0.05, 0.9, 0.05]], # Timestep 2: high prob for 'a' (index 1)\n",
+    "    # Utterance 2: 1 timestep, 3 vocab_size (padded to max_len_in_batch=2)\n",
+    "    [[0.1, 0.1, 0.8],  # Timestep 1: high prob for 'b' (index 2)\n",
+    "     [0.0, 0.0, 0.0]]   # Padded timestep\n",
+    "]) # Shape: [2, 2, 3]\n",
+    "\n",
+    "# Corrected targets shape: [batch_size, max_target_length] (integer indices)\n",
+    "# Utterance 1 target: 'a' (index 1)\n",
+    "# Utterance 2 target: 'b' (index 2)\n",
+    "targets = torch.tensor([\n",
+    "    [1], # Utterance 1 target: 'a'\n",
+    "    [2]  # Utterance 2 target: 'b'\n",
+    "]) # Shape: [2, 1]\n",
+    "\n",
+    "# Corrected input_lens: relative lengths (0.0 to 1.0)\n",
+    "# Max input length is 2 (from log_probs.shape[1])\n",
+    "input_lens = torch.tensor([2.0 / 2.0, 1.0 / 2.0]) # [1.0, 0.5] for relative lengths\n",
+    "\n",
+    "# Corrected target_lens: relative lengths (0.0 to 1.0)\n",
+    "# Max target length is 1 (from targets.shape[1])\n",
+    "target_lens = torch.tensor([1.0 / 1.0, 1.0 / 1.0]) # [1.0, 1.0] for relative lengths\n",
+    "\n",
+    "# Initialize MetricStats\n",
+    "loss_stats = MetricStats(metric=ctc_loss)\n",
+    "\n",
+    "# Append the batch\n",
+    "loss_stats.append(\n",
+    "     ids=[\"utterance1\", \"utterance2\"],\n",
+    "     log_probs=log_probs,\n",
+    "     targets=targets,\n",
+    "     input_lens=input_lens,\n",
+    "     target_lens=target_lens,\n",
+    "     blank_index=0, # Assuming blank is at index 0\n",
+    "     reduction=\"batch\", # To get individual losses per sample\n",
+    ")\n",
+    "\n",
+    "# Summarize and get the average loss\n",
+    "stats = loss_stats.summarize()\n",
+    "print(stats['average'])\n",
+    "\n",
+    "loss = ctc_loss(log_probs=log_probs,\n",
+    "     targets=targets,\n",
+    "     input_lens=input_lens,\n",
+    "     target_lens=target_lens,blank_index=0)\n",
+    "print(f'loss={loss}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6f480ff6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'average': -1.5772032737731934,\n",
+       " 'min_score': -2.3544065952301025,\n",
+       " 'min_id': 'utterance1',\n",
+       " 'max_score': -0.800000011920929,\n",
+       " 'max_id': 'utterance2'}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats"
+   ]
   }
  ],
  "metadata": {
