planteo del main

--- a/timit/ctc.ipynb
+++ b/timit/ctc.ipynb
@@ -60,24 +60,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ccc0ee22",
    "metadata": {},
    "outputs": [],
    "source": [
-    "vocab_file = 'data/label_encoder_new.txt'\n",
-    "train_json = 'data/train.json'\n",
-    "test_json = 'data/test.json'\n",
-    "valid_json = 'data/dev.json'\n",
-    "# Parámetros\n",
-    "par = { 'n_fft': 400, 'n_mels': 40, 'bs':4, \n",
-    "        'dropout': 0.15,\n",
-    "        'cnn_blocks': 2, 'cnn_channels': (128,256), 'cnn_kernelsize': (3,3),\n",
-    "        'rnn_blocks': 4, 'rnn_neurons': 512, \n",
-    "        'dnn_blocks':2, 'dnn_neurons':512,\n",
-    "        'output_neurons':40\n",
-    "}\n",
-    "\n",
     "def load_phoneme_vocabulary(filepath: str) -> tuple[dict, dict]:\n",
     "    \"\"\"\n",
     "    Carga un vocabulario de fonemas desde un archivo de texto.\n",
@@ -140,12 +127,7 @@
     "        phn_list = phn.strip().split()\n",
     "        phn_list = [self.str2int[phoneme] for phoneme in phn_list]\n",
     "        \n",
-    "        return waveform, torch.tensor(phn_list)\n",
-    "\n",
-    "train_ds = TimitDataset(train_json,vocab_file)\n",
-    "test_ds = TimitDataset(test_json,vocab_file)\n",
-    "valid_ds = TimitDataset(valid_json,vocab_file)\n",
-    "\n"
+    "        return waveform, torch.tensor(phn_list)\n"
    ]
   },
   {
@@ -159,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "284bc7b2",
    "metadata": {},
    "outputs": [],
@@ -178,15 +160,7 @@
     "    phn_length = phn_length.float() / torch.max(phn_length.float()) \n",
     "    padded_wav = pad_sequence(sequences, batch_first=True, padding_value=0)\n",
     "    padded_phn = pad_sequence(labels, batch_first=True, padding_value= -1)\n",
-    "    return (padded_wav, wav_length), (padded_phn, phn_length) # Esta es la salida del dataloader\n",
-    "\n",
-    "\n",
-    "\n",
-    "train_dl = DataLoader(train_ds, batch_size=8, shuffle=True, collate_fn=collate_fn)\n",
-    "test_dl = DataLoader(train_ds, batch_size=16, shuffle=False, collate_fn=collate_fn)\n",
-    "valid_dl = DataLoader(train_ds, batch_size=16, shuffle=False, collate_fn=collate_fn)\n",
-    "\n",
-    "  \n"
+    "    return (padded_wav, wav_length), (padded_phn, phn_length) # Esta es la salida del dataloader\n"
    ]
   },
   {
@@ -338,6 +312,91 @@
   },
   {
    "cell_type": "markdown",
+   "id": "37d5c975",
+   "metadata": {},
+   "source": [
+    "## La clase ASR\n",
+    "Recibe los wavs y devuelve el PER"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad3c7994",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ASR:\n",
+    "    def __init__(train_dl, valid_dl, test_dl, modelo,loss_fn, optimizer, scheduler)):\n",
+    "        self.modelo = modelo\n",
+    "    \n",
+    "    def_fit(): # Entrenamiento y validación\n",
+    "        train()\n",
+    "        valid()\n",
+    "        scheduler.step()\n",
+    "\n",
+    "    def evaluación():\n",
+    "        pass\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6104a23",
+   "metadata": {},
+   "source": [
+    "## Main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db7d7216",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocab_file = 'data/label_encoder_new.txt'\n",
+    "train_json = 'data/train.json'\n",
+    "test_json = 'data/test.json'\n",
+    "valid_json = 'data/dev.json'\n",
+    "\n",
+    "# Parámetros\n",
+    "par = { 'n_fft': 400, 'n_mels': 40, 'bs':4, \n",
+    "        'dropout': 0.15, 'lr': 0.1,\n",
+    "        'cnn_blocks': 2, 'cnn_channels': (128,256), 'cnn_kernelsize': (3,3),\n",
+    "        'rnn_blocks': 4, 'rnn_neurons': 512, \n",
+    "        'dnn_blocks':2, 'dnn_neurons':512,\n",
+    "        'output_neurons':40\n",
+    "}\n",
+    "\n",
+    "modelo = Model_CNN_RNN_DNN_PHN(drop_out=par['dropout'],n_mels=par['n_mels'],\n",
+    "        cnn_blocks=par['cnn_blocks'],cnn_channels=par['cnn_channels'],\n",
+    "        cnn_kernel_size=par['cnn_kernelsize'],rnn_blocks=par['rnn_blocks'],\n",
+    "        rnn_neurons=par['rnn_neurons'], dnn_blocks=par['dnn_blocks'],\n",
+    "        dnn_neurons=par['dnn_neurons'],out_neurons=par['output_neurons'])\n",
+    "   \n",
+    "loss_fn = nn.CTCLoss(blank=0)\n",
+    "optimizer = torch.optim.Adadelta(rho=0.95,lr = par['lr'], eps=1.e-8)\n",
+    "scheduler = ReduceLROnPlateau(optimizer, threshold=0,0025, mode='min', factor='0.8', patience=0)\n",
+    "\n",
+    "train_ds = TimitDataset(train_json,vocab_file)\n",
+    "test_ds = TimitDataset(test_json,vocab_file)\n",
+    "valid_ds = TimitDataset(valid_json,vocab_file)\n",
+    "\n",
+    "train_dl = DataLoader(train_ds, batch_size=8, shuffle=True, collate_fn=collate_fn)\n",
+    "test_dl = DataLoader(train_ds, batch_size=16, shuffle=False, collate_fn=collate_fn)\n",
+    "valid_dl = DataLoader(train_ds, batch_size=16, shuffle=False, collate_fn=collate_fn)\n",
+    "\n",
+    "  \n",
+    "\n",
+    "asr = ASR(nn.Module)\n",
+    "PER = asr(train_dl, valid_dl, test_dl, modelo,loss_fn, optimizer, scheduler)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7dff4833",
    "metadata": {},
    "source": [
@@ -392,12 +451,12 @@
     "                (wavs,wavs_l), (phns, phns_l) = batch\n",
     "                step += 1\n",
     "                # loss = self.fit_batch(batch)\n",
-    "                feats = self.hparams.compute_features(wavs)\n",
+    "                feats = MelSpectrogram(wavs)\n",
     "                feats = self.modules.normalize(feats, wavs_l)\n",
-    "                pout, pout_l = modelo(feats)\n",
-    "                loss = criterion(pout, phns, wavs_l, phns_l)\n",
-    "                loss.backward()\n",
-    "                optimizer.step()\n",
+    "                pout, pout_l = modelo(feats) # Paso el batch por el modelo\n",
+    "                loss = criterion(pout, phns, wavs_l, phns_l) # Calculo la loss del batch\n",
+    "                loss.backward() # Calculo gradientes \n",
+    "                optimizer.step() # Acualizo parámetros de la funcion de loss\n",
     "                # scheduler.step()\n",
     "                self.ctc_metrics.append(batch.id, pout, phns, pout_l, phns_l)\n",
     "                avg_train_loss = update_average(loss, avg_train_loss, step)\n",
@@ -491,42 +550,6 @@
     "                    )\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d66e040d",
-   "metadata": {},
-   "source": [
-    "## Main"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "873fc31e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "modelo = modelo['cnn_rnn_dnn'] = Model_CNN_RNN_DNN_PHN(\n",
-    "    drop_out=par['dropout'],\n",
-    "    n_mels=par['n_mels'],\n",
-    "    cnn_blocks=par['cnn_blocks'],\n",
-    "    cnn_channels=par['cnn_channels'],\n",
-    "    cnn_kernel_size=par['cnn_kernelsize'],\n",
-    "    rnn_blocks=par['rnn_blocks'] ,\n",
-    "    rnn_neurons=par['rnn_neurons'],\n",
-    "    dnn_blocks=par['dnn_blocks'],\n",
-    "    dnn_neurons=par['dnn_neurons'],\n",
-    "    out_neurons=par['output_neurons'])\n",
-    "   \n",
-    "\n",
-    "optimizer = torch.optim.Adadelta(rho=0.95,lr = self.params['lr'],eps=1.e-8)\n",
-    "criterion = nn.CTCLoss(blank=0).to(device)\n",
-    "# Prepare iterating variables\n",
-    "avg_train_loss = 0.0\n",
-    "step = 0\n",
-    "optimizer_step = 0\n"
    ]
   }
  ],
