modificación de train

--- a/timit/aux.ipynb
+++ b/timit/aux.ipynb
@@ -1563,6 +1563,32 @@
    "source": [
     "stats"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ae581302",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Prueba():\n",
+    "    def fun(self):\n",
+    "        self._ft(5)\n",
+    "    \n",
+    "    def _ft(self,x):\n",
+    "        print(x)\n",
+    "\n",
+    "prueba= Prueba\n",
+    "prueba().fun()"
+   ]
   }
  ],
  "metadata": {
