--- a/timit/ctc.ipynb
+++ b/timit/ctc.ipynb
@@ -327,18 +327,66 @@
    "outputs": [],
    "source": [
     "class ASR:\n",
-    "    def __init__(train_dl, valid_dl, test_dl, modelo,loss_fn, optimizer, scheduler)):\n",
+    "    def __init__(train_dl, valid_dl, test_dl, modelo,loss_fn, optimizer, scheduler,params)):\n",
     "        self.modelo = modelo\n",
+    "        self.loss_fn = loss_fn\n",
+    "        self.optimizer = optimizer\n",
+    "        self.scheduler = scheduler\n",
+    "        self.train_dl = train_dl\n",
+    "        self.valid_dl = valid_dl\n",
+    "        self.test_dl = test_dl\n",
+    "        self.train_loss = list()\n",
+    "        self.valid_loss = list()\n",
+    "        self.n_epochs = params['n_epochs']\n",
+    "\n",
+    "    def train():\n",
+    "        for i in range(1, n_epochs+1):\n",
+    "            print(f'Procesando epoch {i}/{n_epochs}')\n",
+    "            avg_train_loss = 0.0\n",
+    "            step = 0 # Contador de batches de un epoch\n",
+    "            modelo.to(device)\n",
+    "            modelo.train()\n",
+    "            optimizer.zero_grad()\n",
+    "            with tqdm(self.train_dl, colour=\"yellow\", initial=step, desc='entrenando') as t:\n",
+    "                for batch in t:\n",
+    "                    (wavs,wavs_l), (phns, phns_l) = batch\n",
+    "                    step += 1\n",
+    "                    feats = F.MelSpectrogram(wavs)\n",
+    "                    feats = self._normalize(feats, wavs_l)\n",
+    "                    pout, pout_l = modelo(feats) # Paso el batch por el modelo\n",
+    "                    loss = self.loss_fn(pout, phns, wavs_l, phns_l) # Calculo la loss del batch\n",
+    "                    loss.backward() # Calculo gradientes \n",
+    "                    optimizer.step() # Acualizo parámetros de la funcion de loss\n",
+    "                    avg_train_loss = self._update_average(loss, avg_train_loss, step)\n",
+    "                    t.set_postfix(train_loss=avg_train_loss)\n",
+    "            train_loss.append((i,avg_train_loss))\n",
     "    \n",
-    "    def_fit(): # Entrenamiento y validación\n",
+    "    def valid():\n",
+    "        pass # <--seguir acá\n",
+    "    \n",
+    "    def fit(): # Entrenamiento y validación\n",
     "        train()\n",
     "        valid()\n",
     "        scheduler.step()\n",
     "\n",
     "    def evaluación():\n",
     "        pass\n",
+    "    \n",
+    "    # Métodos auxiliares\n",
+    "    def _update_average(loss, avg_loss,step):\n",
+    "    \"\"\"Update running average of the loss.\n",
+    "    Lo que hace es: \n",
+    "    alfa = sum(x)\n",
+    "    avg_old = alfa/(N-1)\n",
+    "    avg_new = (alfa + xi)/N\n",
+    "    \"\"\"\n",
+    "    if torch.isfinite(loss):    \n",
+    "        avg_loss -= avg_loss / step\n",
+    "        avg_loss += float(loss) / step\n",
+    "    return avg_loss\n",
     "\n",
-    "    "
+    "    def _normalize(feats, wavs_l):\n",
+    "        pass\n"
    ]
   },
   {
@@ -363,7 +411,7 @@
     "\n",
     "# Parámetros\n",
     "par = { 'n_fft': 400, 'n_mels': 40, 'bs':4, \n",
-    "        'dropout': 0.15, 'lr': 0.1,\n",
+    "        'n_epochs': 2, dropout': 0.15, 'lr': 0.1,\n",
     "        'cnn_blocks': 2, 'cnn_channels': (128,256), 'cnn_kernelsize': (3,3),\n",
     "        'rnn_blocks': 4, 'rnn_neurons': 512, \n",
     "        'dnn_blocks':2, 'dnn_neurons':512,\n",
