--- a/timit/ctc.ipynb
+++ b/timit/ctc.ipynb
@@ -339,30 +339,41 @@
     "        self.valid_loss = list()\n",
     "        self.n_epochs = params['n_epochs']\n",
     "\n",
-    "    def train():\n",
-    "        for i in range(1, n_epochs+1):\n",
-    "            print(f'Procesando epoch {i}/{n_epochs}')\n",
+    "    def train(self):\n",
+    "        for i in range(1, self.n_epochs+1):\n",
+    "            print(f'Procesando epoch {i}/{self.n_epochs}')\n",
     "            avg_train_loss = 0.0\n",
     "            step = 0 # Contador de batches de un epoch\n",
-    "            modelo.to(device)\n",
-    "            modelo.train()\n",
-    "            optimizer.zero_grad()\n",
+    "            self.modelo.to(device)\n",
+    "            self.modelo.train()\n",
+    "            self.optimizer.zero_grad()\n",
     "            with tqdm(self.train_dl, colour=\"yellow\", initial=step, desc='entrenando') as t:\n",
     "                for batch in t:\n",
     "                    (wavs,wavs_l), (phns, phns_l) = batch\n",
     "                    step += 1\n",
     "                    feats = F.MelSpectrogram(wavs)\n",
     "                    feats = self._normalize(feats, wavs_l)\n",
-    "                    pout, pout_l = modelo(feats) # Paso el batch por el modelo\n",
+    "                    pout, pout_l = self.modelo(feats) # Paso el batch por el modelo\n",
     "                    loss = self.loss_fn(pout, phns, wavs_l, phns_l) # Calculo la loss del batch\n",
     "                    loss.backward() # Calculo gradientes \n",
-    "                    optimizer.step() # Acualizo parámetros de la funcion de loss\n",
+    "                    self.optimizer.step() # Acualizo parámetros de la funcion de loss\n",
     "                    avg_train_loss = self._update_average(loss, avg_train_loss, step)\n",
     "                    t.set_postfix(train_loss=avg_train_loss)\n",
-    "            train_loss.append((i,avg_train_loss))\n",
+    "            self.train_loss.append((i,avg_train_loss))\n",
     "    \n",
-    "    def valid():\n",
-    "        pass # <--seguir acá\n",
+    "    def valid(self):\n",
+    "        self.modelo.eval()\n",
+    "        avg_valid_loss = 0.0\n",
+    "        step = 0\n",
+    "        with torch.no_grad():\n",
+    "            for batch in tqdm(self.valid_dl, colour=\"green\", initial=step, desc='validando'):\n",
+    "                self.step += 1\n",
+    "                loss = self.evaluate_batch(batch, stage=Stage.VALID)\n",
+    "                avg_valid_loss = self._update_average(loss, avg_valid_loss)\n",
+    "\n",
+    "\n",
+    "            self.step = 0\n",
+    "            self.on_stage_end(Stage.VALID, avg_valid_loss, epoch)\n",
     "    \n",
     "    def fit(): # Entrenamiento y validación\n",
     "        train()\n",
@@ -426,7 +437,7 @@
     "   \n",
     "loss_fn = nn.CTCLoss(blank=0)\n",
     "optimizer = torch.optim.Adadelta(rho=0.95,lr = par['lr'], eps=1.e-8)\n",
-    "scheduler = ReduceLROnPlateau(optimizer, threshold=0,0025, mode='min', factor='0.8', patience=0)\n",
+    "scheduler = ReduceLROnPlateau(optimizer, threshold=0.0025, mode='min', factor='0.8', patience=0)\n",
     "\n",
     "train_ds = TimitDataset(train_json,vocab_file)\n",
     "test_ds = TimitDataset(test_json,vocab_file)\n",
